src/objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>No_on_course__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Please update the number of people attending this course</inlineHelpText>
        <label>No. on course</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price_VAT_Quote__c</fullName>
        <formula>Quote.Opportunity.Total_Amount_VAT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price + VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Training_Date_From__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Update to show training dates on the Quote to send to Client</inlineHelpText>
        <label>Training Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Date_Fromr__c</fullName>
        <formula>TEXT(Training_Date_From__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Date From</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Date_to__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Please update so the training dates appear on the quote sent to client.
If it is for one day, then put the same date in &apos;Training Date From&apos; &amp; &apos;Training Date To&apos;.</inlineHelpText>
        <label>Training Date to</label>
        <type>Date</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>